    - Import make_path from File::Path in Dpkg::Source::Package::V2.
      Regression introduced in dpkg 1.18.0. Closes: #789957
    - Make the BinaryFiles subpackage self-contained by explicitly importing
      File::Spec in Dpkg::Source::Package::V2.
    - Do not exclude pre-existing symlinks when unpacking the debian/ tarball
      in Dpkg::Source::Package::V2. Closes: #790073, #791535
  * Documentation:
    - Fix grammar in dpkg-architecture(1).
      Thanks to Chris Lamb <lamby@debian.org>. Closes: #787616
    - Use the feature area name in the dpkg-buildflags(1) subsection title.
    - Document DPKG_HOOK_ACTION also in dpkg(1) ENVIRONMENT section.
    - Clarify when some features where added in man pages.
    - Document --yet-to-unpack, --predep-packages and all --assert-<feature>
      commands as supported in both «dpkg --help» and dpkg(1).
    - Document abitable in dpkg-architecture(1).
    - Clarify that an architecture wildcard is a Debian thing in
      dpkg-architecture(1).
    - Document multiarch triplet in dpkg-architecture(1) TERMS section.
    - Remove “my” keyword from Dpkg perl modules function prototypes.
    - Say FUNCTIONS instead of METHODS for Dpkg modules when appropriate.
    - Fix POD syntax inside verbatim paragraph in Dpkg::Changelog.
    - Document and mark Dpkg::Arch as a public module.
    - Fix Dpkg::Changelog::Parse::changelog_parse documentation.

  [ Updated programs translations ]
  * Dutch (Frans Spiesschaert). Closes: #789097
  * Simplified Chinese (Zhou Mo). Closes: #787986
  * Turkish (Mert Dirik). Closes: #788211
  * Vietnamese (Trần Ngọc Quân).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

  [ Updated dselect translations ]
  * Dutch (Frans Spiesschaert). Closes: #789096

 -- Guillem Jover <guillem@debian.org>  Sat, 30 May 2015 03:18:43 +0200

dpkg (1.18.1) unstable; urgency=low

  [ Guillem Jover ]
  * Cast c_isbits() c argument to an unsigned char when indexing the array.